using Kryo in package parameters